k8s/mysql-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: skillpulse
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
